--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".LoadingActivity"
+            android:theme="@style/AppTheme.Transparent.NoTitle" />
         <activity android:name=".ImageViewActivity" />
         <activity
             android:name=".SpecificChatActivity"
