--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".CreateSingleChatActivity"
+            android:theme="@style/AppTheme.Transparent.NoTitle"/>
         <activity android:name=".OfflineActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,19 +22,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoadingActivity"
+        <activity android:name=".LoadingActivity"
             android:theme="@style/AppTheme.Transparent.NoTitle" />
         <activity android:name=".ImageViewActivity" />
-        <activity
-            android:name=".SpecificChatActivity"
+        <activity android:name=".SpecificChatActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".CreateNewChatActivity" />
         <activity android:name=".AllChatsActivity" />
         <activity android:name=".LogInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
