--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewUserDetails"></activity>
+        <activity android:name=".NewUserDetails" />
         <activity
             android:name=".CreateSingleChatActivity"
             android:theme="@style/AppTheme.Transparent.NoTitle" />
@@ -35,11 +35,6 @@
         <activity android:name=".CreateNewChatActivity" />
         <activity android:name=".AllChatsActivity" />
         <activity android:name=".LogInActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
