--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".UserDetails"></activity>
         <activity android:name=".NewUserDetails" />
         <activity
             android:name=".CreateSingleChatActivity"
@@ -27,15 +28,13 @@
         <activity
             android:name=".LoadingActivity"
             android:theme="@style/AppTheme.Transparent.NoTitle" />
-        <activity
-            android:name=".ImageViewActivity"             />
+        <activity android:name=".ImageViewActivity" />
         <activity
             android:name=".SpecificChatActivity"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".CreateNewChatActivity" />
         <activity android:name=".AllChatsActivity" />
-        <activity android:name=".LogInActivity">
-        </activity>
+        <activity android:name=".LogInActivity"></activity>
     </application>
 
 </manifest>
