--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".OfflineApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,23 +17,24 @@
         <activity android:name=".GroupDetailsActivity" />
         <activity android:name=".UserDetailsActivity" />
         <activity android:name=".NewUserDetailsActivity" />
-        <activity android:name=".CreateSingleChatActivity"
+        <activity
+            android:name=".CreateSingleChatActivity"
             android:theme="@style/AppTheme.Transparent.NoTitle" />
-        <activity android:name=".OfflineActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".LoadingActivity"
+        <activity
+            android:name=".LoadingActivity"
             android:theme="@style/AppTheme.Transparent.NoTitle" />
         <activity android:name=".ImageViewActivity" />
-        <activity android:name=".SpecificChatActivity"
+        <activity
+            android:name=".SpecificChatActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".CreateNewChatActivity" />
         <activity android:name=".AllChatsActivity" />
-        <activity android:name=".LogInActivity" />
+        <activity android:name=".LogInActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
