--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,10 +35,11 @@
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".CreateNewChatActivity" />
         <activity android:name=".AllChatsActivity" />
-        <activity android:name=".LogInActivity">
+        <activity
+            android:name=".LogInActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
